--- a/TensorFlowSteve.ipynb
+++ b/TensorFlowSteve.ipynb
@@ -58,19 +58,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TpnuFITI6Tzu",
-        "outputId": "b3e56e55-b5f4-4f3e-cc6a-ada88a6c4a82"
+        "outputId": "1fd35ccd-67d7-483b-c9b2-a9ba517c1531"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Updated property [core/project].\n",
-            "\n",
-            "\n",
-            "To take a quick anonymous survey, run:\n",
-            "  $ gcloud survey\n",
-            "\n"
+            "Updated property [core/project].\n"
           ]
         }
       ],
@@ -88,7 +83,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "srQJL7OKVRww",
-        "outputId": "3a5714b6-f97b-408e-942e-37017c813a5e"
+        "outputId": "0609b03c-6a8f-4bbf-8001-5b52fa5f569a"
       },
       "execution_count": 4,
       "outputs": [
@@ -167,7 +162,7 @@
       ],
       "metadata": {
         "id": "U7eMpqp_RehS",
-        "outputId": "d1353cf1-f86f-44fa-dc30-cdbf45f5b5a5",
+        "outputId": "57848f7d-9dbe-48c8-d672-c78340c65eaf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -210,7 +205,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Idznxze77E0e",
-        "outputId": "35450fd9-6ca4-4d47-92b2-f87d5aaf0f01"
+        "outputId": "fab5448a-5907-444c-e004-46fbbf228a7c"
       },
       "outputs": [
         {
@@ -295,7 +290,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "EtDaoWZLPxIE",
-        "outputId": "d228dc51-129d-44ba-fd72-8db68d8ea9ae"
+        "outputId": "cdd2c578-8fb2-45f8-ac26-a292daed57ae"
       },
       "execution_count": 9,
       "outputs": [
@@ -350,7 +345,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOkpJ6qJbG8Y",
-        "outputId": "9a297c17-3f45-4548-fe4e-b241b7fa31ff"
+        "outputId": "c8151e63-6142-4a49-dc7e-b04f20a1c493"
       },
       "execution_count": 11,
       "outputs": [
@@ -447,9 +442,9 @@
           "height": 621
         },
         "id": "qKdCmnM5B5s8",
-        "outputId": "45c19c8e-3440-466e-9b42-59d94891649d"
+        "outputId": "d95e7a19-ec84-4996-f078-f90319a66395"
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -467,7 +462,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 315,
+      "source": [
+        "val=trains[1][1]['milepost'].unique()\n",
+        "val.sort()\n",
+        "val"
+      ],
+      "metadata": {
+        "id": "eLjAgvTqemtA",
+        "outputId": "b7ca4f71-d734-4787-ee95-3fb1d01c7a7d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([253, 255, 256, 257, 258, 260, 261, 263, 264, 265, 266, 267, 268,\n",
+              "       269, 270, 271, 272, 274, 275, 276, 277, 279, 280, 281, 282, 283,\n",
+              "       285, 286, 288, 289, 290, 291, 293, 294, 295, 297, 298, 299, 300,\n",
+              "       302, 303, 304, 306, 307, 308, 310, 311, 312, 314, 315, 316, 318,\n",
+              "       319, 320, 321, 322, 323, 325])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -621,7 +648,7 @@
         "id": "QAWjDV2v3mb8",
         "outputId": "4284db5b-5a73-4d52-c65a-aeb12ba0f362"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
