--- a/MLModel1.ipynb
+++ b/MLModel1.ipynb
@@ -296,172 +296,30 @@
     {
       "cell_type": "code",
       "source": [
-        "# aotuRoute=pd.json_normalize(dfTrainsLearn.iloc[110]['aotuTrainData.routeLocationList']) \n",
-        "# aotuRoute['stationType'].unique()\n",
-        "# len(aotuRoute.iloc[65].activityList) > 0\n",
-        "#aotuRoute.iloc[65]['activityList']\n",
-        "eventLocations = aotuRoute[aotuRoute['activityList'].map(len) > 1]\n",
-        "eventLocations"
+        "def getWorkLocations(dfTrainsLocation):\n",
+        "  if len(dfTrainsLocation['aotuTrainData.routeLocationList']) == 0:\n",
+        "    return None\n",
+        "  aotuRoute=pd.json_normalize(dfTrainsLocation['aotuTrainData.routeLocationList']) \n",
+        "  eventLocations = aotuRoute[aotuRoute['activityList'].map(len) > 1]\n",
+        "  return np.array(eventLocations['milepost.milepostNumber'].unique())\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 112
-        },
-        "id": "TsYgT41SKyAn",
-        "outputId": "83b55e7c-409a-45c2-c83a-68c675d3a638"
+        "id": "TsYgT41SKyAn"
       },
-      "execution_count": 131,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "    locationId  routeSequence  subdivisionId stationType  isEventLocation  \\\n",
-              "32   158766162            590            106           I            False   \n",
-              "65   812194904            590            106           I            False   \n",
-              "\n",
-              "                                         activityList  milepost.milepostNumber  \n",
-              "32  [{'activityCode': 1, 'qualifier': 'null', 'sta...                    202.2  \n",
-              "65  [{'activityCode': 1, 'qualifier': 'null', 'sta...                    202.2  "
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-95b8e362-6a83-48b1-9b45-aa0a0b313ac5\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>locationId</th>\n",
-              "      <th>routeSequence</th>\n",
-              "      <th>subdivisionId</th>\n",
-              "      <th>stationType</th>\n",
-              "      <th>isEventLocation</th>\n",
-              "      <th>activityList</th>\n",
-              "      <th>milepost.milepostNumber</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>32</th>\n",
-              "      <td>158766162</td>\n",
-              "      <td>590</td>\n",
-              "      <td>106</td>\n",
-              "      <td>I</td>\n",
-              "      <td>False</td>\n",
-              "      <td>[{'activityCode': 1, 'qualifier': 'null', 'sta...</td>\n",
-              "      <td>202.2</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>65</th>\n",
-              "      <td>812194904</td>\n",
-              "      <td>590</td>\n",
-              "      <td>106</td>\n",
-              "      <td>I</td>\n",
-              "      <td>False</td>\n",
-              "      <td>[{'activityCode': 1, 'qualifier': 'null', 'sta...</td>\n",
-              "      <td>202.2</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-95b8e362-6a83-48b1-9b45-aa0a0b313ac5')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-95b8e362-6a83-48b1-9b45-aa0a0b313ac5 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-95b8e362-6a83-48b1-9b45-aa0a0b313ac5');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ]
-          },
-          "metadata": {},
-          "execution_count": 131
-        }
-      ]
+      "execution_count": 145,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#workLocations = getWorkLocations(dfTrainsLearn.iloc[101])\n",
+        "dfTrainsLearn['workLocations'] = dfTrainsLearn.apply(lambda row: getWorkLocations(row), axis=1)"
+      ],
+      "metadata": {
+        "id": "5sNuNU-iSgFy"
+      },
+      "execution_count": 151,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -523,12 +381,12 @@
     {
       "cell_type": "code",
       "source": [
-        "dfTrainsLearn = dfTrainsLearn.drop(['trainEstimatedPositionList'], axis=1)"
+        "dfTrainsLearn = dfTrainsLearn.drop(['aotuTrainData.routeLocationList'], axis=1)"
       ],
       "metadata": {
         "id": "BpeBp1Jfu-Hj"
       },
-      "execution_count": 106,
+      "execution_count": 155,
       "outputs": []
     },
     {
@@ -551,7 +409,8 @@
         "                                            'locomotiveList',\n",
         "                                            'subdivisionList',\n",
         "                                            'trainActualPositionList',\n",
-        "                                            'trainEstimatedPositionList'])"
+        "                                            'trainEstimatedPositionList',\n",
+        "                                            'aotuTrainData.routeLocationList'])"
       ],
       "metadata": {
         "id": "hBmsqv6IuVVO"
@@ -564,16 +423,16 @@
       "source": [
         "print(dfTrainsLearn.shape)\n",
         "print(dfTrainsLearn.info())\n",
-        "print(dfTrainsLearn.iloc[0])"
+        "print(dfTrainsLearn.iloc[10])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jTVXPBSQ2gp3",
-        "outputId": "232550f9-6b8b-4629-a523-483817f45cc6"
+        "outputId": "09007953-899a-4dac-8ab5-1f19f4bc5ba1"
       },
-      "execution_count": 113,
+      "execution_count": 156,
       "outputs": [
         {
           "output_type": "stream",
@@ -614,17 +473,17 @@
             " 26  aotuTrainData.over158TonCarCount                                           143050 non-null  int64   \n",
             " 27  aotuTrainData.highWideCarCount                                             143050 non-null  int64   \n",
             " 28  aotuTrainData.eventCode                                                    143050 non-null  int64   \n",
-            " 29  aotuTrainData.routeLocationList                                            143050 non-null  object  \n",
-            " 30  lastReportedPosition.nextSignalState.milepostLocation.milepostNumber       121984 non-null  float64 \n",
-            " 31  lastReportedPosition.nextSignalState.signalState                           121984 non-null  float64 \n",
-            " 32  lastReportedPosition.precedingSignalState.milepostLocation.milepostNumber  121577 non-null  float64 \n",
-            " 33  lastReportedPosition.precedingSignalState.previousSignalState              110875 non-null  float64 \n",
-            " 34  lastReportedPosition.precedingSignalState.signalState                      121577 non-null  float64 \n",
-            " 35  milepost                                                                   143050 non-null  int64   \n",
-            " 36  hour                                                                       143050 non-null  object  \n",
-            " 37  lastReportedSpeedMPH                                                       143050 non-null  int64   \n",
-            " 38  locomotiveCount                                                            143050 non-null  int64   \n",
-            " 39  symbolType                                                                 143050 non-null  category\n",
+            " 29  lastReportedPosition.nextSignalState.milepostLocation.milepostNumber       121984 non-null  float64 \n",
+            " 30  lastReportedPosition.nextSignalState.signalState                           121984 non-null  float64 \n",
+            " 31  lastReportedPosition.precedingSignalState.milepostLocation.milepostNumber  121577 non-null  float64 \n",
+            " 32  lastReportedPosition.precedingSignalState.previousSignalState              110875 non-null  float64 \n",
+            " 33  lastReportedPosition.precedingSignalState.signalState                      121577 non-null  float64 \n",
+            " 34  milepost                                                                   143050 non-null  int64   \n",
+            " 35  hour                                                                       143050 non-null  object  \n",
+            " 36  lastReportedSpeedMPH                                                       143050 non-null  int64   \n",
+            " 37  locomotiveCount                                                            143050 non-null  int64   \n",
+            " 38  symbolType                                                                 143050 non-null  category\n",
+            " 39  workLocations                                                              125038 non-null  object  \n",
             "dtypes: category(2), float64(11), int64(19), object(8)\n",
             "memory usage: 42.8+ MB\n",
             "None\n",
@@ -638,11 +497,11 @@
             "trainId.trainSection                                                                             \n",
             "trainId.trainSymbol                                                                         MEWLI\n",
             "trainId.trainDate                                                                      2022-04-21\n",
-            "lastReportedPosition.positionTime                                            2022-04-21T23:31:08Z\n",
-            "lastReportedPosition.speedMPH                                                                 -12\n",
+            "lastReportedPosition.positionTime                                            2022-04-21T23:33:00Z\n",
+            "lastReportedPosition.speedMPH                                                                 -10\n",
             "lastReportedPosition.milepostLocation.subdivisionId                                           106\n",
             "lastReportedPosition.milepostLocation.trackName                                         WEST MAIN\n",
-            "lastReportedPosition.milepostLocation.milepost.milepostNumber                            766.9304\n",
+            "lastReportedPosition.milepostLocation.milepost.milepostNumber                            766.5653\n",
             "aotuTrainData.priorityCode                                                                      4\n",
             "aotuTrainData.categoryCode                                                                     12\n",
             "aotuTrainData.authorityRangeCode                                                                2\n",
@@ -657,7 +516,6 @@
             "aotuTrainData.over158TonCarCount                                                                0\n",
             "aotuTrainData.highWideCarCount                                                                  0\n",
             "aotuTrainData.eventCode                                                                         0\n",
-            "aotuTrainData.routeLocationList                                                                []\n",
             "lastReportedPosition.nextSignalState.milepostLocation.milepostNumber                          NaN\n",
             "lastReportedPosition.nextSignalState.signalState                                              NaN\n",
             "lastReportedPosition.precedingSignalState.milepostLocation.milepostNumber                     NaN\n",
@@ -665,9 +523,10 @@
             "lastReportedPosition.precedingSignalState.signalState                                         NaN\n",
             "milepost                                                                                      766\n",
             "hour                                                                                2022-04-21T23\n",
-            "lastReportedSpeedMPH                                                                          -12\n",
+            "lastReportedSpeedMPH                                                                          -10\n",
             "locomotiveCount                                                                                 2\n",
             "symbolType                                                                                      M\n",
+            "workLocations                                                                                None\n",
             "Name: 0, dtype: object\n"
           ]
         }
