--- a/MLModel1_2.ipynb
+++ b/MLModel1_2.ipynb
@@ -779,7 +779,7 @@
         "id": "1FsMwzd7xSLZ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 641
+          "height": 988
         },
         "outputId": "66729a2a-12b5-412e-9a18-971075d6ec5f"
       },
@@ -3292,121 +3292,10 @@
         "preds = np.stack([t.predict(valid_xs) for t in m.estimators_])"
       ],
       "metadata": {
-        "id": "eS53q1RUZRva",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8addf115-db3d-4953-b17d-c9d4fd74b9f8"
+        "id": "eS53q1RUZRva"
       },
-      "execution_count": 71,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/base.py:444: UserWarning: X has feature names, but DecisionTreeRegressor was fitted without feature names\n",
-            "  f\"X has feature names, but {self.__class__.__name__} was fitted without\"\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -3942,6 +3831,65 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = dfTrainsNextBeop.tail(14165)\n",
+        "# beopValues = beopValues.to_frame().join(valid_y)\n",
+        "#m_rmse(m, valid_xs_imp, valid_y)\n",
+        "b = b.reset_index(drop=true)\n",
+        "#print (b)\n",
+        "y = valid_y.reset_index(drop=true)\n",
+        "#print (y)\n",
+        "df2  = pd.concat([b, y], axis=1)\n",
+        "df2.dropna()\n",
+        "print(df2)\n",
+        "r_mse(df2['nextBeop'], df2['nextSpeed'])\n",
+        "#round(math.sqrt(((beopValues-valid_y)**2).mean()), 6)\n",
+        "# print(BeopValidations[:5])\n",
+        "#print(valid_y[:5])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9-wNLj6p9amP",
+        "outputId": "c64ec59e-fe63-4d33-f19c-678884ec03cd"
+      },
+      "execution_count": 150,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       nextBeop  nextSpeed\n",
+            "0           9.0       -4.0\n",
+            "1           8.0       -3.0\n",
+            "2           7.0        8.0\n",
+            "3           2.0       -1.0\n",
+            "4          -1.0        9.0\n",
+            "...         ...        ...\n",
+            "14160      -1.0       16.0\n",
+            "14161      -3.0        9.0\n",
+            "14162       0.0        1.0\n",
+            "14163       5.0       -8.0\n",
+            "14164       0.0       -8.0\n",
+            "\n",
+            "[14165 rows x 2 columns]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12.388081"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 150
         }
       ]
     }
